v0.4 (not yet released)
- [stats] issue buildtimetrend/python-lib#129 : Add programming languages to projects chart
- [stats] switch 'events per project' and 'build/jobs per project' charts
- [trends,stats] issue buildtimetrend/dashboard#1 : Remove fixed width for metrics, to make them responsive
- upgrade to Keen Javascript API 3.4.0
- upgrade to bootstrap 3.3.6
- upgrade to jQuery 1.12.0

v0.3 (released on 16Nov2015)
- issue buildtimetrend/python-lib#21 : add charts with build job results
- issue buildtimetrend/python-lib#52 : upgrade to Keen JS API 3.2
- issue buildtimetrend/python-lib#23 : add charts with build job results grouped by branch or by build environment parameters
- issue buildtimetrend/python-lib#70 : use bootstrap buttons and ButtonClass on dashboard to select timeframe
- issue buildtimetrend/python-lib#93 : upgrade to bootstrap 3.3.5
- issue buildtimetrend/python-lib#88 : use caching for Keen.io charts
- issue buildtimetrend/python-lib#99 : Enable auto refreshing dashboard charts with `refresh` url parameter
- issue buildtimetrend/python-lib#108 : Make projects menu scrollable
- issue buildtimetrend/python-lib#100, #103 : Filter on build properties for chart data, like build
trigger, branch, build matrix, build result
- issue buildtimetrend/python-lib#108 : Limit size of projects dropdown menu and make it scrollable
- issue buildtimetrend/python-lib#91 : display stats of pull requests
- issue buildtimetrend/python-lib#45 : add charts with average build job per branch and build matrix parameters
- issue buildtimetrend/python-lib#113 : use url parameter to set default timeframe
- issue buildtimetrend/python-lib#121 : use url parameter to set query filters
- upgrade to Keen Javascript API 3.3.0
- issue buildtimetrend/python-lib#84 : Add admin dashboard with service usage statistics

v0.2 (released on 18Feb2015)
- issue buildtimetrend/python-lib#19 : update Keen.io charts using query request refresh function