@@ -90,6 +90,9 @@
       <div class="col-sm-6 col-md-3">
         <div id="metric_average_build_time"></div>
       </div>
+      <div class="col-sm-4 col-md-2">
+        <div id="metric_days_since_last_fail"></div>
+      </div>
     </div>
 
     <div class="row">
